# csplice

./: README.md  pyproject.toml
csplice/: __init__.py
csplice/core/: __init__.py  gtftobed.py  readoverlap.py
csplice/script/: __init__.py  cli.py
docs/: conf.py  modules.rst
