[build-system]
requires = [
    "poetry-core>=1.0.0", 
    "setuptools>=42",
    "wheel"
]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "csplice"
version = "0.1.8"
description = "Genomic data processing toolkit"
authors = ["Zan Yuan <yfinddream@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0.0"
bioframe = "^0.8.0"
click = "^8.0.0"
pysam = "^0.23.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[tool.poetry.scripts]
csplice = "csplice.script.cli:main"
